[package]
name = "lens_controller"
version = "0.1.0"
edition = "2021"
authors = ["Elhanan Buchsbaum <elhananby@gmail.com>"]

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json ="1.0"
url = "2.5.2"
lens_driver = { path = "../lens_driver" }
log = "0.4.22"
env_logger = "0.11.3"
