[package]
name = "lens_controller"
version = "0.1.0"
edition = "2021"
authors = ["Elhanan Buchsbaum <elhananby@gmail.com>"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11.3"
url = "2.2"
lens_driver = { path = "../lens_driver" }
linregress = "0.5"
csv = "1.1"
braid_event_stream = { path = "../braid_event_stream" }