[package]
name = "lens_controller"
version = "0.1.0"
edition = "2021"
authors = ["Elhanan Buchsbaum <elhananby@gmail.com>"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
serde_json = "1.0"
url = "2.5.2"
lens_driver = { path = "../lens_driver" }
log = "0.4.22"
env_logger = "0.11.3"
linregress = "0.5.3"
csv = "1.1"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
eventsource-stream = "0.2"
anyhow = "1.0"
clap = { version = "4.5.9", features = ["derive"] }
